force-app/main/default/objects/SMS_BORPayment_Subscriber__c/SMS_BORPayment_Subscriber__c.object-meta.xml
<CustomObject>
    <label>SMS BORPayment Subscriber</label>
    <nameField>
        <displayFormat>BORS-{00000000}</displayFormat>
        <label>SMS BORPayment Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS BORPayment Subscribers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>