force-app/main/default/objects/SMS_BORPayment_Subscriber__c/fields/BOR_Payment__c.field-meta.xml
<CustomField>
    <fullName>BOR_Payment__c</fullName>
    <label>BOR Payment</label>
    <referenceTo>SMS_BORPayment__c</referenceTo>
    <relationshipLabel>SMS BORPayment Subscribers</relationshipLabel>
    <relationshipName>SMS_BORPayment_Subscribers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>