force-app/main/default/objects/SMS_BORPayment_Subscriber__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>