force-app/main/default/objects/SMS_BORPayment_Subscriber__c/fields/Invoice_Details__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Details__c</fullName>
    <label>Invoice Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>