force-app/main/default/objects/SMS_BORPayment_Subscriber__c/fields/SF_Subscription__c.field-meta.xml
<CustomField>
    <fullName>SF_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS BORPayment Subscribers</relationshipLabel>
    <relationshipName>SMS_BORPayment_Subscribers</relationshipName>
    <type>Lookup</type>
</CustomField>